# pyo3-tutorial

./: .gitignore  Cargo.toml  activate  install-deps
lessons/1-ndarray/: Cargo.toml
lessons/1-ndarray/src/: main.rs
lessons/2-rayon/: Cargo.toml
lessons/2-rayon/src/: main.rs
lessons/3-pyo3-module/: Cargo.toml  test.py
lessons/3-pyo3-module/src/: lib.rs
lessons/4-type-stubs/: Cargo.toml  rust_module_stubs.pyi  test.py
lessons/4-type-stubs/src/: lib.rs
lessons/5-science-calc/: Cargo.toml  science_calc.pyi  test.py
lessons/5-science-calc/src/: lib.rs
lessons/6-aabb-query/: Cargo.toml
lessons/6-aabb-query/src/: lib.rs
projects/svm/0-publish/: Cargo.toml
projects/svm/0-publish/.github/workflows/: publish.yml
projects/svm/0-publish/src/: lib.rs
